--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,7 +9,19 @@
 
     }
 
+    .steps {
+        width: 768px;
+    }
+
+    .lesson .col {
+        flex-basis: 0;
+        flex-grow: 1;
+    }
+
+
 }
+
+
 
 
 /* MOBILE  */
